--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "@types/node": "^7.0.12",
     "@types/react": "^15.0.21",
     "@types/react-dom": "^15.5.0",
+    "@types/react-redux": "^4.4.39",
     "@types/redis": "^0.12.36",
     "babelify": "^7.3.0",
     "browserify": "^14.1.0",
