--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "native-promise-only": "^0.8.1",
     "node-jsx": "^0.13.3",
     "nodemailer": "^2.6.4",
-    "query-string": "^4.2.3",
+    "query-string": "^4.3.4",
     "random-string": "^0.1.2",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
@@ -72,6 +72,7 @@
     "@types/mongodb": "^2.1.41",
     "@types/multer": "0.0.33",
     "@types/node": "^7.0.12",
+    "@types/query-string": "^4.3.1",
     "@types/react": "^15.0.21",
     "@types/react-dom": "^15.5.0",
     "@types/react-redux": "^4.4.39",
