--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "random-string": "^0.1.2",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-fastclick": "^3.0.1",
     "react-redux": "^5.0.4",
     "redis": "^2.6.3",
     "redux": "^3.6.0",
