--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "masaospace",
+  "name": "dice-columbus",
   "version": "0.0.16",
   "description": "Masao posting system",
   "main": "index.js",
@@ -10,7 +10,6 @@
   "author": "uhyo",
   "license": "undetermined",
   "dependencies": {
-    "@uhyo/masaospace-util": "file:./packages/util",
     "base64-arraybuffer": "^0.1.5",
     "body-parser": "^1.15.2",
     "bytes": "^2.4.0",
@@ -19,10 +18,9 @@
     "cookie-parser": "^1.4.3",
     "cron": "^1.1.1",
     "csurf": "^1.9.0",
-    "deep-extend": "^0.4.1",
     "dom-scroll-into-view": "^1.2.1",
     "ect": "^0.5.9",
-    "express": "^4.14.0",
+    "express": "^4.16.3",
     "express-session": "^1.14.2",
     "extend": "^3.0.0",
     "gulp-concat": "^2.6.0",
@@ -90,7 +88,7 @@
     "gulp-ruby-sass": "^2.1.1",
     "gulp-sass": "^3.1.0",
     "gulp-server-livereload": "^1.9.2",
-    "gulp-sourcemaps": "^2.6.0",
+    "gulp-sourcemaps": "^2.6.4",
     "gulp-typescript": "^3.1.2",
     "img-loader": "^2.0.0",
     "json-loader": "^0.5.4",
